# libudo

./: README.md  meson.build  meson_options.txt
docs/: api.rst  build.rst  conf.py  csock-raw.rst  file-ops.rst  futex.rst  index.rst  jpool.rst  log.rst  macros.rst  meson.build  mm.rst  shm.rst  sock-tcp.rst  sock-udp.rst  usock-tcp.rst  usock-udp.rst  version.rst  vsock-tcp.rst  vsock-udp.rst
include/: csock-raw.h  file-ops.h  futex.h  jpool.h  log.h  macros.h  meson.build  mm.h  shm.h  sock-tcp.h  sock-udp.h  tpool.h  udo.h.in  usock-tcp.h  usock-udp.h  version.h  vsock-tcp.h  vsock-udp.h
src/: csock-raw.c  file-ops.c  futex.c  jpool.c  log.c  meson.build  mm.c  shm.c  sock-tcp.c  sock-udp.c  tpool.c  usock-tcp.c  usock-udp.c  vsock-tcp.c  vsock-udp.c
tests/: meson.build  test-csock-raw.c  test-file-ops.c  test-futex.c  test-jpool.c  test-log.c  test-macros.c  test-mm.c  test-shm.c  test-sock-tcp.c  test-sock-udp.c  test-tpool.c  test-usock-tcp.c  test-usock-udp.c  test-version.c  test-vsock-tcp.c  test-vsock-udp.c
