option('docs',
	type: 'boolean', value: false,
	description: 'Build documentation')

option('file-offset-bits',
	type: 'integer', value: 64,
	description: 'Sets the _FILE_OFFSET_BITS macro')

option('file-ops',
	type: 'feature', value: 'disabled',
	description: 'Build with file-operations support')

option('shm',
	type: 'feature', value: 'disabled',
	description: 'Build with shared memory support')

option('sock-tcp',
	type: 'feature', value: 'disabled',
	description: 'Build with socket-tcp support')

option('sock-udp',
	type: 'feature', value: 'disabled',
	description: 'Build with socket-udp support')

option('jpool',
	type: 'feature', value: 'disabled',
	description: 'Build with job-pool support')

option('csock-raw',
	type: 'feature', value: 'disabled',
	description: 'Build with can socket-raw support')

option('usock-tcp',
	type: 'feature', value: 'disabled',
	description: 'Build with unix socket-tcp support')

option('usock-udp',
	type: 'feature', value: 'disabled',
	description: 'Build with unix socket-udp support')

option('vsock-tcp',
	type: 'feature', value: 'disabled',
	description: 'Build with vm socket-tcp support')

option('vsock-udp',
	type: 'feature', value: 'disabled',
	description: 'Build with vm socket-udp support')

option('tests',
	type: 'boolean', value: false,
	description: 'Build tests')

option('vcan-iface',
	type: 'string', value: 'vcan0',
	description: 'Virtual CAN interface to run test with')
